7.8.0
 - Faster text decoding in `stream_from`.  At last, faster than regular query!
 - Ran `autoupdate` (because the autotools told me to).
 - Documentation tweak. (#584)
 - Typo in README.md. (#586)
 - Support `std::optional<std::string_view>` etc. in `stream_to`. (#596)
 - Remove support for single-quoted array/composite elements.  No such thing!
7.7.4
 - `transaction_base::for_each()` is now called `for_stream()`. (#580)
 - New `transaction_base::for_query()` is similar, but non-streaming. (#580)
 - Query data and iterate directly as client-side types: `query()`. (#580)
 - New ways to query a single row!  `query01()` and `query1()`. (#580)
 - We now have 3 kinds of execution: "exec", "query", and "stream" functions.
 - Use C++23 `std::unreachable()` where available.
 - `result::iter()` return value now keeps its `result` alive.
7.7.3
 - Fix up more damage done by auto-formatting.
 - New `result::for_each()`: simple iteration and conversion of rows.  (#528)
 - Add some missing headers in `<pqxx/pqxx>`.  (#551)
 - More strictness in `header-pre.hxx`/`header-post.hxx` checking.
 - Disallow nesting of `ignore-deprecated` blocks.
 - Deprecate `exec` functions' `desc` parameter.
 - Fix `placeholders` documentation.  (#557)
 - Strip `const` and references from `value_type`. (#558)
 - Get tests running on appveyor. (#560)
 - Fix broken nonblocking connection on Windows. (#560)
7.7.2
 - Fix up damage done by auto-formatting.
7.7.1
 - When you build libpqxx, configure the compiler's C++ version yourself!
 - Finally fix a long-standing silly warning in autogen.
 - Fix `digit_to_number` not being found on some comilers.  (#518, #519)
 - In audit mode, define `_FORTIFY_SOURCE` to enable some extra checks.
 - Make more functions `constexpr`.  Nothing particularly useful though.
 - Make more functions `noexcept`.
 - Move constructor & assignment for `result`.
 - Support LGTM.com and Facebook "infer" static analysis.