@@ -1,5 +1,6 @@
 7.8.0
- - Faster text decoding in `stream_from`.  At last, faster than regular query!
+ - Faster text decoding in `stream_from`, and escaping in `stream_to`.  (#601)
+ - At last, streaming throughput is faster (on my system) than a regular query.
  - Ran `autoupdate` (because the autotools told me to).
  - Documentation tweak. (#584)
  - Typo in README.md. (#586)
